--- a/group/css/style.scss
+++ b/group/css/style.scss
@@ -1,3 +1,11 @@
+
+
+@mixin sm{
+  @media(max-width:905px){
+    @content;
+  }
+}
+
 * {
     font-family: "Popins", sans-serif;
     margin: 0;
@@ -8,10 +16,11 @@
   }
   body {
     min-height: 100vh;
-    background-image: url(../img/download.jpg);
+ 
     background-size: cover;
     background-position: center;
     height: 100vh;
+    background-color: #f1f1f1;
     .container-fluid {
         width: 100%;
       }
@@ -23,10 +32,14 @@
     top: 0;
     background-color: black;
     width: 100%;
+    z-index:99999;
     .nav1 {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        height: 44px;
+        position: relative;
+        z-index:99999999;
         .span {
             margin: 10px;
             border: 1px solid rgba(0, 195, 255, 0.4);
@@ -64,6 +77,7 @@
                 a {
                     color: white;
                   }
+               
                   .dropdown-menu {
                     display: none;
                   }
@@ -90,6 +104,16 @@
                 right: 0;
                 top: 22px;
                 background-color: #212d38;
+                z-index: 99;
+              }
+              @include sm{
+                flex-direction: column;
+                line-height: 40px;
+                /* height: 150px; */
+                background-color: black;
+                width: 100%;
+                height: 125px;
+                align-items: center;
               }
           }
           a {
@@ -97,6 +121,9 @@
             padding: 5px 30px;
             color: white;
             font-size: 16px;
+          }
+          @include sm{
+            padding: 0;
           }
       }
   }
@@ -106,7 +133,7 @@
     padding: 3px;
   }
   .side-bar {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color:#212d38;
     backdrop-filter: blur(20px);
     width: 220px;
     height: 100vh;
@@ -114,7 +141,8 @@
     top: 0;
     left: -100%;
     overflow: auto;
-    transition: 2s ease-in;
+    transition: 0.2s ease-in;
+    z-index: 99999;
     .tabheader-active {
         color: black !important;
         font-size: 20px;
@@ -137,12 +165,13 @@
           .item:hover {
             background-color: #8621f8;
             transition: 0.3s ease-in;
+            cursor:pointer;
           }
       }
   }
   .active {
     left: 0;
-    transition: 1s ease-in;
+    transition: 0.1s ease-in;
   }
   .close-btn {
     position: absolute;
@@ -158,3 +187,161 @@
   main {
     margin-top: 105px;
   }
+.teabheadercon{
+  padding:10px 15px;
+  line-height: 25px;
+}
+.content{
+  h1{
+    text-align:center;
+    margin-bottom:20px;
+  }
+
+}
+
+
+// ##################### SAHIFAi 1##################################
+.sahifa1{
+  
+ position: sticky;
+ top: 0;
+  height: 100vh;
+  background-position: center;
+  background-size: cover;
+
+
+.logo{
+  margin-top:45px ;
+  background-image: url('../img/logo.jpg');
+  height: auto;
+  background-size: cover;
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 50px 10px;
+  .container{
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .p1{
+      color:white;
+      font-size:24px;
+    }
+    img{
+      max-width: 100%;
+    }
+    a{
+      background-color: white;
+      padding:10px 25px;
+      border-radius: 15px;
+      color:black;
+      width: 214px;text-decoration: none;
+    }
+  }
+}
+
+.logo2{
+  color: #ffffff;
+  background-color: #23445b;
+  .a{
+    text-decoration: none; 
+    text-align: center;
+    display: inline-block;
+    margin: 15px auto;
+  }
+  .dekan{
+   flex-wrap: wrap;
+   justify-content: space-evenly;
+  }
+    .cards{
+      display: flex;
+      justify-content: center;
+      background-color: white;
+      border-radius: 15px;
+      padding: 30px;
+      width: 48%!important;
+      margin:25px 0;
+    
+      .rasm{
+        width: 341px;
+        height: 138px;
+        
+        background-position: 50% 50%;
+        margin: 0 25px 0 0;
+        border-radius: 50% !important;
+        object-fit: cover;
+        display: block;
+        background-size: cover;
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+      }
+        .malumot{
+          .p-dekan{
+            color:gray;
+            font-weight: 400;
+            font-size: 20px;
+          }
+          .h3{
+            font-size: 1.5rem;
+            text-transform: none;
+            font-weight: 700;
+            font-family: Raleway, sans-serif;
+            margin: 19px auto 0 0;
+            color: #25797c !important;
+          }
+          .text{
+            font-weight: 300;
+            font-style: normal;
+            margin: 19px 0 0;
+            color: #111111 !important;
+        }
+        .icons{
+          a{
+            text-decoration: none;
+          }
+          .bi-messenger{
+            color: blue;
+            margin-right:  15px;
+            margin-top: 15px;
+          }
+          .bi-whatsapp{
+            color:	#25D366;
+            margin-right:  15px;
+            margin-top: 15px;
+          }
+          .bi-twitter{
+            color: lightblue;
+            margin-right:  15px;
+            margin-top: 15px;
+          }
+            .bi-telegram{
+              color: #229ED9;
+              margin-right:  15px;
+              margin-top: 15px;
+            
+            }
+        }
+      }
+      }
+        
+      }
+    .logo3{
+      
+   .card-group{
+    gap: 10px;
+    border-radius: 25px;
+   }
+    }
+  }
+
+  //============================== МОДАЛНЫ ОКНО==========================================
+  // .modal1{
+  //   position: fixed;
+  //   width: 100%;
+  //   height: 100vh;
+  //   position: fixed;
+  //   opacity: 0.8;
+  //   background-image: linear-gradient(to bottom,red,gr);
+
+  // }
